...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotation="0"
    tools:context=".activity.CompassActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/include"
        android:layout_width="414dp"
        android:layout_height="408dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/coord_dot" />


        <TextView
            android:id="@+id/labelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="204dp"
            android:layout_marginEnd="176dp"
            android:rotation="0"
            android:text="Julia"
...
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/compass_base" />

        <ImageView
            android:id="@+id/coordDot"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:rotation="0"
            app:layout_constraintCircle="@+id/include"
            app:layout_constraintCircleAngle="0"
            app:layout_constraintCircleRadius="130dp"
...
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:layout_constraintVertical_bias="0.644" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:onClick="onLaunchListClicked"
        android:text="ADD FRIEND"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewUIDbtn"
        android:layout_width="wrap_content"
...
