<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotation="0"
    tools:context=".activity.FourZoomActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/include"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/compass_base"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:rotation="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/compass_base" />

        <ImageView
            android:id="@+id/compass_base2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="43dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle" />

        <ImageView
            android:id="@+id/compass_base3"
            android:layout_width="171dp"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle" />
        >

        <include
            android:id="@+id/dotInclude"
            layout="@layout/dot_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircle="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
        >

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/listButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:onClick="onLaunchListClicked"
        android:text="ADD FRIEND"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ZoomInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:text="+"
        android:onClick="onZoomInClicked"
        app:layout_constraintBottom_toTopOf="@+id/ZoomOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/ZoomOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:text="-"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ZoomInButton"
        app:layout_constraintTop_toBottomOf="@+id/ZoomInButton" />

    <Button
        android:id="@+id/myinfo"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:onClick="onLaunchMyInfoClicked"
        android:text="MY INFO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <ImageView
        android:id="@+id/online_four_zoom"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/online" />

    <ImageView
        android:id="@+id/offline_four_zoom"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/offline" />

    <TextView
        android:id="@+id/status_four_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />
</androidx.constraintlayout.widget.ConstraintLayout>