...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DisplayUserActivity">


    <EditText
        android:id="@+id/user_name"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:hint="NAME"
        android:inputType="text"
        android:maxLines="1"
...
